init commit: update to rds

--- a/database.ini
+++ b/database.ini
@@ -2,4 +2,10 @@
 host=localhost
 database=ISProject
 user=postgres
-password=pressrelease
+password=
+
+[awspostgresql]
+host=honeypostgre.chicbhruvtld.us-east-1.rds.amazonaws.com
+database=postgres
+user=postgres
+password=
